# desk

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  code.py  config.yml  deploy.sh  deskpi.service  docker-compose.yml  env.yml  hosts.json  package.json  playbook.yml  pyproject.toml  runcc.yml  tasksfile.js
circuit-playground/: code.py
deskpi/: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  build.rs  docker-compose.yml  playbook.yml  pyproject.toml  runcc.yml
deskpi/.cargo/: config.toml
deskpi/lib/: Cargo.toml  build.rs
deskpi/lib/src/: circuit_playground.rs  earth.rs  lib.rs  macropad.rs  thinkink.rs
deskpi/shaders/src/: game_of_life_shader.frag
deskpi/src/: main.rs
impression/: impression.py  impression.service  pyproject.toml
impression/templates/: index.html
lib/: Cargo.toml  Makefile.toml  build.rs
lib/src/: backlight.rs  earth.rs  input.rs  lib.rs  macropad.rs  matrix.rs  pixels.rs  puck.rs  thinkink.rs
macropad/: CLAUDE.md  Makefile  README.md  code.py
patches/: raylib+3.7.0.patch  raylib-sys+3.7.0.patch  raylib-sys.patch  raylib.patch
roles/hub/handlers/: main.yml
roles/hub/tasks/: main.yml
roles/hub/templates/: desk.service
roles/impression/handlers/: main.yml
roles/impression/tasks/: main.yml
roles/macropad/tasks/: main.yml
roles/thinkink/tasks/: main.yml
roles/unicorn/tasks/: main.yml
shaders/src/: game_of_life_shader.vert
src/: apps.rs  backlight.rs  circuit_playground.rs  fireworks.rs  home_assistant.rs  light.rs  macropad.rs  main.rs  raylib_actor.rs  raylib_manager.rs  restarting_manager.rs  serial_sink.rs  thinkink.rs  toggl.rs  unicorn.rs  urban.rs
src/apps/: thinkink_image.rs
src/apps/thinkink_image/: game_of_life.rs  solar_system.rs  weather_forecast.rs
thinkink/: .gitignore  sketch.yaml  thinkink.ino
thinkink/models/matrix-adapter/: blockout.blend  model.FCStd  model.stl
thinkink/thinkink/: thinkink.ino
unicorn/: pyproject.toml
unicorn/assets/: font.xcf
unicorn/src/: WIFI_CONFIG.py  font.py  index.html  main.py
urban/: __init__.py  urban.py
