[package]
name = "lib"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
raylib = { version = "3.7" }
rppal = { version = "0.14.1", optional = true }
serialport = "4.2.0"
json = "0.12.4"
chrono = "0.4.23"
log = "0.4.17"
macaddr = "1.0.1"
splines = "4.3.1"
base64 = "0.22.0"

[features]
default = []
reloader = []
pi = ["dep:rppal"]
